--- a/pocket_tools/CMakeLists.txt
+++ b/pocket_tools/CMakeLists.txt
@@ -1,5 +1,2 @@
-add_executable( pocket_config_test "${CMAKE_CURRENT_SOURCE_DIR}/tests/pocket_config_test.cc" )
-
-message( STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}" )
-
-target_include_directories( pocket_config_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc" )
+add_executable(pocket_param_test "${CMAKE_CURRENT_SOURCE_DIR}/tests/pocket_paramgen_test.cc" )
+target_include_directories( pocket_param_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc" )
